@@ -1,0 +1,8 @@
+CORE
+range2.smv
+
+^file .* line 4: empty ranges are not allowed$
+^EXIT=2$
+^SIGNAL=0$
+--
+--
